# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.141 $ $Date: 2009-02-23 22:53:30 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2009-02-23  Christian Heller  <christian.heller@tuxtax.de>
        * Add file "compound_http_name.c" for storing parsed http elements in one compound model
        * Add file "part_accessor.c"
        * Continue http request parser

2009-02-21  Christian Heller  <christian.heller@tuxtax.de>
        * Readd files "http_request_converter.c" and "http_response_converter.c"

2009-02-17  Christian Heller  <christian.heller@tuxtax.de>
        * Delete files "http_request_converter.c" and "http_response_converter.c"
        * Add file "http_request_compound_selector.c"

2009-02-10  Christian Heller  <christian.heller@tuxtax.de>
        * Add files "http_response_processor.c" and "http_response_selector.c"
        * Investigate detection of content type in http messages and add corresponding
            comments and WWW resource links

2009-02-09  Christian Heller  <christian.heller@tuxtax.de>
        * Rename and move file "separator_http_model.c" to "separator_http_name.c"
        * Add files "http_request_processor.c" and "http_request_selector.c"
        * Start implementing http request parsing functionality, to soon replace the old file "http_request_converter.c"
        * Move directory "constant/name/cybol/xdt/" to "constant/name/xdt_model/"

2009-02-08  Christian Heller  <christian.heller@tuxtax.de>
        * Reactivate socket functionality