@@ -19,7 +19,7 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: xml_processor.c,v $ $Revision: 1.16 $ $Date: 2009-01-31 16:06:34 $ $Author: christian $
+ * @version $RCSfile: xml_processor.c,v $ $Revision: 1.17 $ $Date: 2009-02-26 23:11:29 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
@@ -313,6 +313,11 @@ void process_xml_tag_name(void* p0, void* p1, void* p2, void* p3, void* p4, void
                                     // a tag end character as indicator of subsequent element content or
                                     // an empty tag end character was detected.
 
+                                    append_part(p0, p1, p2,
+                                        (void*) NODE_NAME_XML_CYBOL_NAME, (void*) NODE_NAME_XML_CYBOL_NAME_COUNT,
+                                        (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT,
+                                        tn, (void*) &tnc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL);
+
                                     break;
 
                                 } else {
@@ -321,71 +326,6 @@ void process_xml_tag_name(void* p0, void* p1, void* p2, void* p3, void* p4, void
                                     tnc++;
                                 }
                             }
-
-/*??
-    fwprintf(stdout, L"TEST process tag name tnc: %i\n", tnc);
-    fwprintf(stdout, L"TEST process tag name tn: %ls\n", (wchar_t*) tn);
-*/
-
-                            // The destination tag name part name, abstraction, model, details.
-                            void* n = *NULL_POINTER_MEMORY_MODEL;
-                            void* nc = *NULL_POINTER_MEMORY_MODEL;
-                            void* ns = *NULL_POINTER_MEMORY_MODEL;
-                            void* a = *NULL_POINTER_MEMORY_MODEL;
-                            void* ac = *NULL_POINTER_MEMORY_MODEL;
-                            void* as = *NULL_POINTER_MEMORY_MODEL;
-                            void* m = *NULL_POINTER_MEMORY_MODEL;
-                            void* mc = *NULL_POINTER_MEMORY_MODEL;
-                            void* ms = *NULL_POINTER_MEMORY_MODEL;
-                            void* d = *NULL_POINTER_MEMORY_MODEL;
-                            void* dc = *NULL_POINTER_MEMORY_MODEL;
-                            void* ds = *NULL_POINTER_MEMORY_MODEL;
-
-                            // Allocate destination tag name.
-                            allocate_part((void*) &n, (void*) &nc, (void*) &ns, (void*) &a, (void*) &ac, (void*) &as,
-                                (void*) &m, (void*) &mc, (void*) &ms, (void*) &d, (void*) &dc, (void*) &ds,
-                                (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-
-/*??
-    fwprintf(stdout, L"TEST process xml tag name 3: %i\n", *rem);
-    fwprintf(stdout, L"TEST process xml tag name 3 tnc: %i\n", tnc);
-*/
-
-                            // Decode destination tag name name.
-                            // CAUTION! The pre-defined constant "tag" is used as name here!
-                            // The "add_compound_element_by_name" function below will automatically
-                            // add a number as suffix, to make the name unique.
-                            decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) NODE_NAME_XML_CYBOL_NAME, (void*) NODE_NAME_XML_CYBOL_NAME_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-/*??
-    fwprintf(stdout, L"TEST process xml tag name 4: %i\n", *rem);
-    fwprintf(stdout, L"TEST process xml tag name 4 n: %ls\n", (wchar_t*) n);
-    fwprintf(stdout, L"TEST process xml tag name 4 nc: %i\n", *((int*) nc));
-    fwprintf(stdout, L"TEST process xml tag name 4 ns: %i\n", *((int*) ns));
-*/
-
-                            // Decode destination tag name abstraction.
-                            // CAUTION! All xml element tag names are of the abstraction "wide_character",
-                            // as handed over as argument in the function "allocate_part" above.
-                            decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-                            // Decode destination tag name model.
-                            decode((void*) &m, (void*) mc, (void*) ms, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, tn, (void*) &tnc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-                            // The destination tag name does not contain any details.
-
-/*??
-    fwprintf(stdout, L"TEST process xml tag name 5: %i\n", *rem);
-*/
-
-                            // Add tag name to destination xml element (compound) details.
-                            // CAUTION! Hand over the tag name name as reference!
-                            // CAUTION! The pre-defined constant "tag" is used as name here!
-                            add_compound_element_by_name(*dd, p1, p2, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
-
-/*??
-    fwprintf(stdout, L"TEST process xml tag name 6: %i\n", *rem);
-*/
 
                         } else {
 
@@ -615,55 +555,11 @@ void process_xml_attribute(void* p0, void* p1, void* p2, void* p3, void* p4, voi
                         int avc = *NUMBER_0_INTEGER_MEMORY_MODEL;
 
                         process_xml_attribute_name((void*) &an, (void*) &anc, p5, p6);
-
-/*??
-    fwprintf(stdout, L"TEST process attribute anc: %i\n", anc);
-    fwprintf(stdout, L"TEST process attribute an: %ls\n", (wchar_t*) an);
-*/
-
                         process_xml_attribute_value((void*) &av, (void*) &avc, p5, p6);
 
-/*??
-    fwprintf(stdout, L"TEST process attribute avc: %i\n", avc);
-    fwprintf(stdout, L"TEST process attribute av: %ls\n", (wchar_t*) av);
-*/
-
-                        // The destination attribute name, abstraction, model, details.
-                        void* n = *NULL_POINTER_MEMORY_MODEL;
-                        void* nc = *NULL_POINTER_MEMORY_MODEL;
-                        void* ns = *NULL_POINTER_MEMORY_MODEL;
-                        void* a = *NULL_POINTER_MEMORY_MODEL;
-                        void* ac = *NULL_POINTER_MEMORY_MODEL;
-                        void* as = *NULL_POINTER_MEMORY_MODEL;
-                        void* m = *NULL_POINTER_MEMORY_MODEL;
-                        void* mc = *NULL_POINTER_MEMORY_MODEL;
-                        void* ms = *NULL_POINTER_MEMORY_MODEL;
-                        void* d = *NULL_POINTER_MEMORY_MODEL;
-                        void* dc = *NULL_POINTER_MEMORY_MODEL;
-                        void* ds = *NULL_POINTER_MEMORY_MODEL;
-
-                        // Allocate destination attribute.
-                        allocate_part((void*) &n, (void*) &nc, (void*) &ns, (void*) &a, (void*) &ac, (void*) &as,
-                            (void*) &m, (void*) &mc, (void*) &ms, (void*) &d, (void*) &dc, (void*) &ds,
-                            (void*) NUMBER_0_INTEGER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-
-                        // Decode destination attribute name.
-                        decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, an, (void*) &anc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-                        // Decode destination attribute abstraction.
-                        decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-                        // Decode destination attribute model.
-                        decode((void*) &m, (void*) mc, (void*) ms, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, av, (void*) &avc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-                        // The destination attribute details do NOT have to be decoded,
-                        // since an attribute itself has just name and value, but no meta information.
-
-                        // Add part to whole (compound) model.
-                        // CAUTION! Hand over the name as reference!
-                        // Storing many parts with identical tag name is not a problem,
-                        // since the tag name of a part is added to its details compound.
-                        add_compound_element_by_name(*dd, p1, p2, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
+                        append_part(p0, p1, p2, an, (void*) &anc,
+                            (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT,
+                            av, (void*) &avc, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL);
 
                         // The has attribute flag.
                         // CAUTION! This HAS TO BE a local variable, because the function
@@ -757,10 +653,6 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
         void* dc = *NULL_POINTER_MEMORY_MODEL;
         void* ds = *NULL_POINTER_MEMORY_MODEL;
 
-/*??
-    fwprintf(stdout, L"TEST process element 0: %i\n", *rem);
-*/
-
         // Allocate destination part.
         allocate_part((void*) &n, (void*) &nc, (void*) &ns, (void*) &a, (void*) &ac, (void*) &as,
             (void*) &m, (void*) &mc, (void*) &ms, (void*) &d, (void*) &dc, (void*) &ds,
@@ -770,24 +662,17 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
         // CAUTION! The pre-defined constant "part" is used as name here!
         // The "add_compound_element_by_name" function below will automatically
         // add a number as suffix, to make the name unique.
-        decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) NODE_XML_CYBOL_NAME, (void*) NODE_XML_CYBOL_NAME_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-/*??
-    fwprintf(stdout, L"TEST process element nc: %i\n", *((int*) nc));
-    fwprintf(stdout, L"TEST process element n: %ls\n", (wchar_t*) n);
-*/
+        decode((void*) &n, (void*) nc, (void*) ns, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL,
+            (void*) NODE_XML_CYBOL_NAME, (void*) NODE_XML_CYBOL_NAME_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL,
+            (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
         // Decode destination part abstraction.
         // CAUTION! All xml elements (parts) are of the abstraction "compound",
         // as internally used by the function "allocate_part" above.
         // If an xml element is empty, the compound will just not contain any parts.
-        decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
-
-/*??
-    fwprintf(stdout, L"TEST process element a: %i\n", (wchar_t*) a);
-    fwprintf(stdout, L"TEST process element ac: %i\n", *((int*) ac));
-    fwprintf(stdout, L"TEST process element as: %i\n", *((int*) as));
-*/
+        decode((void*) &a, (void*) ac, (void*) as, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL,
+            (void*) COMPOUND_MEMORY_ABSTRACTION, (void*) COMPOUND_MEMORY_ABSTRACTION_COUNT, *NULL_POINTER_MEMORY_MODEL, *NULL_POINTER_MEMORY_MODEL,
+            (void*) PLAIN_TEXT_CYBOL_ABSTRACTION, (void*) PLAIN_TEXT_CYBOL_ABSTRACTION_COUNT);
 
         // The destination part model and details are decoded further below,
         // depending on the source wide character array.
@@ -811,29 +696,17 @@ void process_xml_element(void* p0, void* p1, void* p2, void* p3, void* p4) {
             process_xml_attribute((void*) &d, (void*) dc, (void*) ds, (void*) &hc, (void*) &ie, p3, p4);
         }
 
-/*??
-    fwprintf(stdout, L"TEST process element 4: %i\n", *rem);
-*/
-
         if (hc != *NUMBER_0_INTEGER_MEMORY_MODEL) {
 
             // Process the element's content.
             process_xml_element_content((void*) &m, (void*) mc, (void*) ms, (void*) &d, (void*) dc, (void*) ds, p3, p4);
         }
 
-/*??
-    fwprintf(stdout, L"TEST process element 5: %i\n", *rem);
-*/
-
         // Add part to whole (compound) model.
         // CAUTION! Hand over the name as reference!
         // Storing many parts with identical tag name is not a problem,
         // since the tag name of a part is added to its details compound.
         add_compound_element_by_name_with_suffix(*dd, p1, p2, (void*) &n, (void*) nc, (void*) ns, a, ac, as, m, mc, ms, d, dc, ds);
-
-/*??
-    fwprintf(stdout, L"TEST process element 6: %i\n", *rem);
-*/
 
     } else {
 
